:athletic_shoe:  ●修正若干问题（隔了一段时间回头看看自己写的代码，奇烂无比，手动汗颜）